Adopt virtual threads for async work