@@ -5,7 +5,6 @@ import doublemoon.mahjongcraft.paper.model.SeatWind;
 import doublemoon.mahjongcraft.paper.table.MahjongTableSession;
 import doublemoon.mahjongcraft.paper.riichi.model.ScoringStick;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import net.kyori.adventure.text.Component;
@@ -903,9 +902,8 @@ public final class TableRenderer {
             ));
         }
 
-        SeatWind direction = placements.get(placements.size() - 1).face();
-        List<DeadWallPlacementMutable> reversed = new ArrayList<>(placements);
-        Collections.reverse(reversed);
+        SeatWind direction = placements.getLast().face();
+        List<DeadWallPlacementMutable> reversed = placements.reversed();
         for (int index = 0; index < reversed.size(); index++) {
             DeadWallPlacementMutable placement = reversed.get(index);
             if (placement.face() == direction) {
@@ -920,7 +918,7 @@ public final class TableRenderer {
                 }
             }
 
-            Location base = reversed.get(0).location();
+            Location base = reversed.getFirst().location();
             double positionY = reversed.get(index % 2 == 0 ? 0 : 1).location().getY();
             double offset = WALL_TILE_STEP * (index / 2);
             placement.setLocation(switch (direction) {
